--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       POSTGRES_PASSWORD: postgres123
       POSTGRES_DB: triage_db
     ports:
-      - "5432:5432"
+      - "5433:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - fluxtriage_postgres_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -20,5 +20,5 @@ services:
       retries: 5
 
 volumes:
-  postgres_data:
+  fluxtriage_postgres_data:
     driver: local
